--- a/composer.json
+++ b/composer.json
@@ -18,5 +18,8 @@
     "minimum-stability": "stable",
     "require-dev": {
         "phpunit/phpunit": "^9.5"
+    },
+    "require": {
+        "doctrine/collections": "^1.6"
     }
 }
