--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "phpunit/phpunit": "^9.5"
     },
     "require": {
-        "doctrine/collections": "^1.6"
+        "doctrine/collections": "^1.6",
+        "ramsey/uuid": "^4.3"
     }
 }
